Fixes container overflow on pre>code blocks

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -333,7 +333,8 @@ code {
 pre > code {
   display: block;
   padding: 1rem 1.5rem;
-  white-space: pre; }
+  white-space: pre;
+  overflow: scroll}
 
 
 /* Tables
